@@ -27,6 +27,7 @@ Other features
  * Added Table Block caption for accessibility (Rahmi Pruitt)
  * Upgrade django-modelcluster to>=5.0 and upgrade django-taggit to >=1.0 for Django 3.0 support (Matt Westcott)
  * Revise tests to ensure all pass in Django 3.0 (Matt Westcott)
+ * Add ability for users to change their own name via the account settings page (Kevin Howbrook)
 
 
 
